test/typechecker.d/invalid/const6.surc.bad
f(i: Integer): Integer = i: Char

